load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["reward_burn.go"],
    importpath = "github.com/prysmaticlabs/prysm/v3/beacon-chain/core/pulse",
    visibility = ["//visibility:public"],
    deps = [
        "//config/params:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["reward_burn_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/require:go_default_library",
    ],
    size = "small"
)
